# infra-cli

./: .env.example  .env.provision.example  .env.provision.gcp.example  .env.setup.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: update-docs-and-commit.md
docs/: GCP.md  architecture.md  develoment.md
src/iblai_infra/: __init__.py  app.py  cli.py  env_provision.py  env_setup.py  env_utils.py  gcp_env_provision.py  models.py  runtime_iam.py  ui.py
src/iblai_infra/ansible/: runner.py
src/iblai_infra/ansible/templates/call-server/: ansible.cfg  call_playbook.yml
src/iblai_infra/ansible/templates/call-server/roles/awscli/tasks/: main.yml
src/iblai_infra/ansible/templates/call-server/roles/docker/tasks/: main.yml
src/iblai_infra/ansible/templates/call-server/roles/ibl_call/tasks/: main.yml
src/iblai_infra/ansible/templates/call-server/roles/ibl_cli_ops/tasks/: main.yml
src/iblai_infra/ansible/templates/call-server/roles/python/tasks/: main.yml
src/iblai_infra/ansible/templates/multi-server/: app_playbook.yml  services_playbook.yml
src/iblai_infra/ansible/templates/multi-server/roles/ibl_dm_services/tasks/: main.yml
src/iblai_infra/ansible/templates/multi-server/roles/ibl_platform_services/tasks/: main.yml
src/iblai_infra/ansible/templates/multi-server/roles/mongodb/tasks/: main.yml
src/iblai_infra/ansible/templates/multi-server/roles/mongodb/templates/: docker-compose.yml.j2
src/iblai_infra/ansible/templates/single-server/: ansible.cfg  launch_playbook.yml  playbook.yml  service_update_playbook.yml
src/iblai_infra/ansible/templates/single-server/roles/admin_setup/tasks/: main.yml
src/iblai_infra/ansible/templates/single-server/roles/data_seeding/tasks/: main.yml
src/iblai_infra/features/: __init__.py  waf.py
src/iblai_infra/prompts/: credentials.py  dns_certs.py  infrastructure.py  review.py  setup.py
src/iblai_infra/providers/: aws.py  gcp.py
src/iblai_infra/terraform/: runner.py  state.py
src/iblai_infra/terraform/templates/aws/call-server/: main.tf  outputs.tf  user_data.sh  variables.tf
src/iblai_infra/terraform/templates/aws/multi-server/: main.tf  outputs.tf  user_data_app.sh  user_data_services.sh  variables.tf
src/iblai_infra/terraform/templates/aws/single-server/: main.tf  outputs.tf  variables.tf  waf.tf
src/iblai_infra/terraform/templates/gcp/single-server/: main.tf  outputs.tf  startup-script.sh  variables.tf
tests/: conftest.py  test_app.py  test_cli.py  test_env_provision.py  test_env_setup.py  test_env_utils.py  test_gcp_provision.py  test_models.py  test_runtime_iam.py  test_state.py  test_ui.py
tests/ansible/: test_runner.py
tests/features/: test_waf.py
tests/prompts/: test_gcp_prompts.py  test_review.py  test_setup.py  test_validators.py
tests/providers/: test_aws.py  test_gcp.py
tests/terraform/: test_runner.py
(+16 files in other folders)
