[project]
name = "iblai-infra"
dynamic = ["version"]
description = "Interactive CLI tool for provisioning ibl.ai infrastructure on AWS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich==15.0.0",
    "questionary==2.1.1",
    "pydantic==2.13.3",
    "boto3==1.42.97",
    "typer==0.25.0",
    "ansible-core==2.19.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]
# GCP provider support (single-server). Optional so AWS-only users don't pull
# the Google SDKs. Terraform itself reads ADC / a service-account key; these
# libraries power credential validation, Cloud DNS discovery, and permission
# checks in `providers/gcp.py`.
gcp = [
    "google-auth[requests]>=2.0",
    "google-cloud-dns>=0.35",
]

[project.scripts]
iblai = "iblai_infra.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/iblai_infra/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/iblai_infra"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
markers = [
    "slow: Run tests that are slow",
]
